# nfl_agent

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
prototyping/: cbs_league.py  data_fetcher.py  download_all.py  fetch_cbs_token.py  report_stats.py
src/: data_fetcher.py  download_all.py  main.py  report_stats.py
src/agent/: fantasy_agent.py
src/data/: stats_dataframe.py
src/nfl_agent/: main.py
src/nfl_agent/agent/: fantasy_agent.py
src/nfl_agent/data/: data_wireframe.py  stats_dataframes.py
src/nfl_agent/tools/: stats_retriever.py  team_manager.py  trade_evaluator.py  waiver_wire.py  web_search.py
src/tools/: __init__.py  stats_retriever.py  team_manager.py  trade_evaluator.py  waiver_wire.py  web_search.py
tests/: test_team_manager.py
