[tool.poetry]
name = "nfl-agent"
version = "0.1.0"
description = ""
authors = ["Olaf Kupschina <olaf.kupschina@gmail.com>"]

packages = [
    { include = "nfl_agent", from = "src" }
]

[tool.poetry.scripts]
nfl_agent = "nfl_agent.main:main"


[tool.poetry.dependencies]
python = "^3.12"
appdirs = "*"
fastparquet = { version = "*", python = ">=3.7" }
numpy = ">=1.0,<2.0"
pandas = ">=1.0,<2.0"
XlsxWriter = "*"
langchain = "^0.3.0"
langchain-community = "^0.3.0"

[tool.poetry.dev-dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
max-line-length = 99
target-version = ['py312']

[tool.flake8]
max-line-length = 99
extend-ignore = ["E203", "W503"]

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pre-commit]
repos = [
    { repo = "https://github.com/pre-commit/pre-commit-hooks", rev = "v4.4.0", hooks = [
        { id = "trailing-whitespace" },
        { id = "end-of-file-fixer" },
        { id = "check-yaml" }
    ]},
    { repo = "https://github.com/psf/black", rev = "24.8.0", hooks = [
        { id = "black" }
    ]},
    { repo = "https://gitlab.com/pycqa/flake8", rev = "7.1.1", hooks = [
        { id = "flake8" }
    ]},
    { repo = "https://github.com/myint/autoflake", rev = "v2.1.0", hooks = [
        { id = "autoflake", args = ["--remove-all-unused-imports", "--remove-unused-variables"] }
    ]},
    { repo = "https://github.com/jendrikseipp/vulture", rev = "v2.6", hooks = [
        { id = "vulture" }
    ]}
]
